Made title editable onclick. Fixed div block spacing to fit everything in 100vh.

--- a/style.css
+++ b/style.css
@@ -7,10 +7,18 @@
 
 #title {
   text-align: center;
+  height: 10vh;
   padding: 10px;
   font-size: 40px;
   font-family: sans-serif;
   font-weight: bold;
+  background: linear-gradient(to right, black, grey);
+  border: 4px solid grey;
+}
+
+#title:hover {
+  cursor: pointer;
+  border: 4px solid aquamarine;
 }
 
 #optionsNavBar {
@@ -42,7 +50,8 @@
   background-color: var(--color);
   transform: translateX(-100%);
   border: 1px dotted white;
-  opacity: 0.9;
+  border-bottom: none;
+  opacity: 0.8;
 }
 
 .barHeight {
